[gd_scene load_steps=2 format=3 uid="uid://dnvhmgl4bkddh"]

[ext_resource type="Script" path="res://Tests/blue_dice_integration_test.gd" id="1_e4vjk"]

[node name="BlueDiceIntegrationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_e4vjk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TestLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Blue Dice Integration Test"
horizontal_alignment = 1

[node name="DebugButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Force All Blue Dice"

[node name="ManualTestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run Integration Test"

[node name="MultiplierDebugButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show MultiplierManager State"

[node name="ResultsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to test..."
autowrap_mode = 3